@@ -1,0 +1,5 @@
+.. aafigure::
+
+  +-----+
+  |  A	|----> B
+  +-----+
